LandPage_Food-Recipe

--- a/index.html
+++ b/index.html
@@ -28,17 +28,11 @@
           fácil e ainda por cima fica maravilhoso, com certeza vai
           impressionar. Faz e depois me conta o que achou!
         </p>
-        <ul>
-          <li>
-            Tempo: 1h10
-          </li>
-          <li>
-            Rendimento: 12 porções
-          </li>
-          <li>
-            Dificuldade: fácil
-          </li>
-        </ul>
+        <p>
+          Tempo: 1h10 <br />
+          Rendimento: 12 porções <br />
+          Dificuldade: fácil <br />
+        </p>
       </section>
       <section id="ingredients">
         <h2>Ingredientes</h2>
@@ -63,23 +57,21 @@
         <h2>
           Modo de preparo
         </h2>
-        <article>
-          <p>No liquidificador, bata a água, o café solúvel, os ovos, o óleo, o
-            açúcar e o chocolate em pó até ficar homogêneo. Transfira para uma
-            tigela, adicione a farinha e o fermento e misture com uma colher.
-            Despeje em forminhas para cupcakes forradas com forminhas de papel e
-            coloque em uma fôrma grande, um ao lado do outro. Leve ao forno
-            médio, preaquecido, por 25 minutos ou até assar e dourar. Retire e
-            deixe esfriar.</p>
-          <p>Para o recheio, leve todos os ingredientes ao fogo médio, mexendo
-            bem até engrossar. Desligue, deixe esfriar e coloque dentro de um
-            saco de confeiteiro com bico perle. Reserve. Coloque o chantilly
-            dentro de um saco de confeiteiro com bico pitanga e reserve</p>
-          <p>Para a montagem, faça um furo no centro dos cupcakes e recheie com o
-            brigadeiro de café reservado. Decore as superfícies dos cupcakes com
-            o chantilly reservado, fazendo círculos. Decore com grãos de café e
-            leve à geladeira até o momento de servir.</p>
-        </article>
+        <p>No liquidificador, bata a água, o café solúvel, os ovos, o óleo, o
+          açúcar e o chocolate em pó até ficar homogêneo. Transfira para uma
+          tigela, adicione a farinha e o fermento e misture com uma colher.
+          Despeje em forminhas para cupcakes forradas com forminhas de papel e
+          coloque em uma fôrma grande, um ao lado do outro. Leve ao forno
+          médio, preaquecido, por 25 minutos ou até assar e dourar. Retire e
+          deixe esfriar.</p>
+        <p>Para o recheio, leve todos os ingredientes ao fogo médio, mexendo
+          bem até engrossar. Desligue, deixe esfriar e coloque dentro de um
+          saco de confeiteiro com bico perle. Reserve. Coloque o chantilly
+          dentro de um saco de confeiteiro com bico pitanga e reserve</p>
+        <p>Para a montagem, faça um furo no centro dos cupcakes e recheie com o
+          brigadeiro de café reservado. Decore as superfícies dos cupcakes com
+          o chantilly reservado, fazendo círculos. Decore com grãos de café e
+          leve à geladeira até o momento de servir.</p>
       </section>
     </main>
   </div>
